<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">镜头大全</string>
    <string name="menu_settings">Settings</string>
	<string name="text_search">搜索</string>
	<string name="please_input"></string>
	<string name="loading_more">加载更多...</string>
	<string name="empty"></string>
	<string name="review">点评</string>
	<string name="article">评测</string>
	<string name="goodPoint">优点</string>
	<string name="badPoint">缺点</string>
	<string name="reviewCont">总结</string>
	<string name="avgScore">平均分: </string>
	<string name="score">评分: </string>
	<string name="pointUp">顶: </string>
	<string name="pintDown">踩: </string>
</resources>