<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:addStatesFromChildren="true"
    android:layout_marginBottom="-5dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.hh.lens.view.AutoMarqueeTextView
        android:id="@+id/proName"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="top|center"
        android:background="@drawable/widget_head_bg"
        android:ellipsize="marquee"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:padding="3dip"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Gallery
        android:id="@+id/picbox"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top|center"
        android:gravity="center_vertical"
        android:spacing="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/article"
            style="@style/frame_button"
            android:text="@string/article"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/empty" />

        <Button
            android:id="@+id/review"
            style="@style/frame_button"
            android:text="@string/review"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>