<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/goodPointLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:text="@string/goodPoint"
            android:textColor="@color/comm_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/goodPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/badPointLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:text="@string/badPoint"
            android:textColor="@color/comm_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/badPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentScoreLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:text="@string/avgScore"
            android:textColor="@color/comm_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/commentScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:singleLine="true"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>