<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:text="@string/goodPoint"
            android:textColor="@color/comm_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/good_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:text="@string/badPoint"
            android:textColor="@color/comm_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bad_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <TextView
            android:id="@+id/review_cont_title"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:text="@string/reviewCont"
            android:textColor="@color/comm_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/review_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/review_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/review_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/review_oppose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/comm_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>